# midp_workbench

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
src/midp_workbench/: fetch_eeg_samples.py  parser.py  sample.py
