[project]
name = "midp_workbench"
version = "0.0.1"
authors = [
  { name="Lennard Berger", email="3730888+Fohlen@users.noreply.github.com" },
]
description = "Workbench for the MIDP dataset"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=1.26.4",
    "boto3~=1.34.36",
    "tqdm~=4.66.1"
]

[project.urls]
Homepage = "https://github.com/Fohlen/midp_workbench"
Issues = "https://github.com/Fohlen/midp_workbench/issues"

[project.scripts]
fetch-eeg-samples = "midp_workbench.fetch_eeg_samples:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
